--- a/index.html
+++ b/index.html
@@ -1,67 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="icon"
+      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQuoJbBeeut0CeFnBgs6XO1_FxSkgqyIcI9Lw&usqp=CAU"
+    />
+    <title>Hello, world!</title>
+  </head>
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-  <link rel="icon"
-    href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQuoJbBeeut0CeFnBgs6XO1_FxSkgqyIcI9Lw&usqp=CAU">
-  <title>Hello, world!</title>
-</head>
-
-<body>
-  <div class="vh-100 bg-danger w-100 d-flex flex-column justify-content-center align-items-center">
-    <h1 id="get-number">0</h1>
-    <button id="add-one" class="btn-primary px-5 py-3">Add One</button>
-  </div>
-  <!-- Optional JavaScript; choose one of the two! -->
-  <!-- Option 1: Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-  </script>
-  <script>
-    // HERE WE GET ELEMENT  \
-    const getnumber = document.getElementById("get-number");
-    const addOneButton = document.getElementById("add-one");
-    //    DECLARE VARIABLE AND ASIGNED
-    let count;
-    console.log(count);
-    count = 0;
-    console.log(count);
-    //   CLICK ON BUTTON ADD ONE
-    addOneButton.addEventListener("click", function () {
-      count = count + 1;
-      getnumber.innerHTML = count;
-      console.log("Clicked", count);
-      console.log(getnumber.innerHTML);
-    });
-    //   // GLOBAL DECLARATION
-    //   //   function get() {
-    //   //     var number = 0;
-    //   //     let newnum = 0;
-    //   //     const numbyconst = 0;
-    //   //   }
-    //   //   get();
-    //   var number = 0;
-    //   let newnum = 0;
-    //   const numbyconst = 0;
-    //   console.log(number, "number");
-    //   console.log(newnum, "newnum");
-    //   console.log(numbyconst);
-    //   newnum = 1;
-    //   number = 3;
-    //   console.log(number, "number");
-    //   console.log(newnum, "newnum");
-  </script>
-  <!-- Option 2: Separate Popper and Bootstrap JS -->
-  <!--
+  <body>
+    <div
+      class="vh-100 bg-danger w-100 d-flex flex-column justify-content-center align-items-center"
+    >
+      <h1 id="get-number">0</h1>
+      <button id="add-one" class="btn-primary px-5 py-3">Add One</button>
+    </div>
+    <!-- Optional JavaScript; choose one of the two! -->
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      // HERE WE GET ELEMENT  \
+      const getnumber = document.getElementById("get-number");
+      const addOneButton = document.getElementById("add-one");
+      //    DECLARE VARIABLE AND ASIGNED
+      let count;
+      console.log(count);
+      count = 0;
+      console.log(count);
+      //   CLICK ON BUTTON ADD ONE
+      addOneButton.addEventListener("click", function () {
+        count = count + 1;
+        getnumber.innerHTML = count;
+        console.log("Clicked", count);
+        console.log(getnumber.innerHTML);
+      });
+      // GLOBAL DECLARATION
+      //   function get() {
+      //     var number = 0;
+      //     let newnum = 0;
+      //     const numbyconst = 0;
+      //   }
+      //   get();
+      //   var number = 0;
+      //   let newnum = 0;
+      //   const numbyconst = 0;
+      //   console.log(number, "number");
+      //   console.log(newnum, "newnum");
+      //   console.log(numbyconst);
+      //   newnum = 1;
+      //   number = 3;
+      //   console.log(number, "number");
+      //   console.log(newnum, "newnum");
+      //
+    </script>
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
-</body>
-
+  </body>
 </html>
