--- a/index.html
+++ b/index.html
@@ -1,74 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://codepen.io/GreenSock/pen/7ba936b34824fefdccfe2c6d9f0b740b.css"
-    />
 
-    <title>Document</title>
-    <style>
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
-      .container {
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://codepen.io/GreenSock/pen/7ba936b34824fefdccfe2c6d9f0b740b.css" />
+  <link rel="stylesheet" href="https://unpkg.com/fullpage.js/dist/fullpage.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.css" />
+  <title>Document</title>
+  <style>
+    /* .container {
         max-height: 100vh;
         overflow-y: scroll;
         scroll-snap-type: y mandatory;
-      }
-      .panel {
-        scroll-snap-align: start;
-        height: 100vh;
-      }
-      .red {
-        background-color: #cf3535;
-        background-image: none;
-      }
-      .panel p {
-        font-size: 32px;
-      }
-      .blue_box {
-        width: 400px;
-        height: 400px;
-        background: blue;
-        border-radius: 10px;
-      }
-      .circle {
-        width: 400px;
-        height: 400px;
-        background: green;
-        border-radius: 50%;
-      }
-      .display_block {
-        display: flex !important;
-      }
-      .overflow_hidden {
+      } */
+    .panel {
+      scroll-snap-align: start;
+      height: 100vh;
+    }
+
+    .red {
+      background-color: #cf3535;
+      background-image: none;
+    }
+
+    .panel p {
+      font-size: 32px;
+    }
+
+    .blue_box {
+      width: 400px;
+      height: 400px;
+      background: blue;
+      border-radius: 10px;
+    }
+
+    .circle {
+      width: 400px;
+      height: 400px;
+      background: green;
+      border-radius: 50%;
+    }
+
+    .display_block {
+      display: flex !important;
+    }
+
+    /* .overflow_hidden {
         overflow: hidden;
-      }
-      .d-flex {
-        display: flex;
-      }
-      .mw_400 {
-        max-width: 400px;
-        margin: 0 auto;
-      }
-      .w_100 {
-        width: 100%;
-      }
-      .justify-content-evenly {
-        justify-content: space-evenly;
-      }
-    </style>
-  </head>
-  <body class="">
-    <div class="container">
-      <section class="panel blue overflow_hidden w_100">
+      } */
+    .d-flex {
+      display: flex;
+    }
+
+    .mw_400 {
+      max-width: 400px;
+      margin: 0 auto;
+    }
+
+    .w_100 {
+      width: 100%;
+    }
+
+    .justify-content-evenly {
+      justify-content: space-evenly;
+    }
+  </style>
+</head>
+
+<body class="">
+  <div id="fullpage">
+    <div class="section">
+      <div class="panel blue overflow_hidden w_100">
         <div>
           <p class="heading_hero">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat
@@ -80,147 +84,126 @@
             <img class="w_100" src="./003.png" alt="003.png" />
           </p>
         </div>
-      </section>
-      <section class="panel orange display_block">
-        <div class="blue_box"></div>
-      </section>
-      <section class="panel red">
-        <div class="circle"></div>
-      </section>
-      <section class="panel blue yoyo">
-        <p class="para">Yoyo Text!</p>
-      </section>
+      </div>
     </div>
+    <div class="section">
+      <div class="panel orange display_block">
+        <div class="blue_box"></div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="panel red">
+        <div class="circle"></div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="panel blue yoyo">
+        <p class="para">Yoyo Text!</p>
+        <a href="./swiper.html">next</a>
+      </div>
+    </div>
+  </div>
 
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js?r=5426"></script>
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js"></script>
-    <script src="https://codepen.io/GreenSock/pen/7ba936b34824fefdccfe2c6d9f0b740b.js"></script>
+  <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js?r=5426"></script>
+  <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js"></script>
+  <script src="https://codepen.io/GreenSock/pen/7ba936b34824fefdccfe2c6d9f0b740b.js"></script>
+  <script src="https://unpkg.com/fullpage.js/dist/fullpage.min.js"></script>
 
-    <script>
-      gsap.registerPlugin(ScrollTrigger);
-      ScrollTrigger.defaults({
-        toggleActions: "restart pause resume pause",
-        scroller: ".container",
-      });
-      // gsap.to(".blue_box", {
-      //   start: "top 20%",
-      //   duration: 2,
-      //   rotation: 360,
-      //   x: "-100px",
-      //   toggleActions: "start none none reverse",
-      // });
-      // gsap.to(".red", {
-      //   scrollTrigger: {
-      //     trigger: ".red",
-      //     toggleActions: "restart pause reverse pause",
-      //   },
-      //   duration: 1,
-      //   backgroundColor: "#FFA500",
-      //   ease: "none",
-      // });
-      // gsap.to(".yoyo p", {
-      //   scrollTrigger: ".yoyo",
-      //   scale: 2,
-      //   repeat: -1,
-      //   yoyo: true,
-      //   ease: "power2",
-      // });
+  <script>
+    new fullpage("#fullpage", {
+      sectionsColor: ["yellow", "orange", "#C0C0C0", "#ADD8E6"],
 
-      let eight = gsap.timeline({
-        scrollTrigger: {
-          trigger: ".display_block",
-          start: "top top",
-          end: "bottom bottom",
-          markers: true,
-          // scrub: 1,
-          toggleActions: "restart none none reverse",
-        },
-      });
-      eight.fromTo(
-        ".blue_box",
-        { xPercent: -100, rotate: "0deg" },
-        {
-          xPercent: 100,
-          rotate: "360deg",
-        }
-      );
-      let first = gsap.timeline({
-        scrollTrigger: {
-          trigger: ".red",
-          start: "top top",
-          end: "bottom center",
-          markers: true,
-          scrub: 1,
-        },
-      });
-      first.fromTo(
-        ".circle",
-        { xPercent: -100, rotate: "0deg" },
-        {
-          xPercent: 100,
-          rotate: "360deg",
-        }
-      );
+      // Get your license at https://alvarotrigo.com/fullPage/pricing/
+      licenseKey: "YOUR LICENSE KEY HERE ",
+    });
+  </script>
 
-      let third = gsap.timeline({
-        trigger: ".yoyo",
-        start: "top 50%",
+  <script>
+    gsap.registerPlugin(ScrollTrigger);
+    ScrollTrigger.defaults({
+      toggleActions: "restart pause resume pause",
+    });
+
+    let eight = gsap.timeline({
+      scrollTrigger: {
+        trigger: ".display_block",
+        start: "top top",
+        end: "bottom bottom",
+        markers: true,
+        // scrub: 1,
+        toggleActions: "restart none none reverse",
+      },
+    });
+    eight.fromTo(
+      ".blue_box", {
+        xPercent: -100,
+        rotate: "0deg"
+      }, {
+        xPercent: 100,
+        rotate: "360deg",
+      }
+    );
+    let first = gsap.timeline({
+      scrollTrigger: {
+        trigger: ".red",
+        start: "top top",
         end: "bottom center",
         markers: true,
         scrub: 1,
-      });
-      third.fromTo(
-        ".para",
-        { scale: 0 },
-        {
-          scale: 2,
-        }
-      );
-      let hero = gsap.timeline();
-      gsap.set(".home_main_navbar", {
+      },
+    });
+    first.fromTo(
+      ".circle", {
+        xPercent: -100,
+        rotate: "0deg"
+      }, {
+        xPercent: 100,
+        rotate: "360deg",
+      }
+    );
+
+    let hero = gsap.timeline();
+    gsap.set(".home_main_navbar", {
+      autoAlpha: 0,
+      yPercent: -100,
+    });
+    hero
+      .from(".heading_hero", {
+        xPercent: -100,
         autoAlpha: 0,
-        yPercent: -100,
-      });
-      hero
-        .from(".heading_hero", {
-          xPercent: -100,
+        ease: "back(2)",
+        duration: 1,
+        delay: 2,
+      })
+      .from(
+        ".para_hero", {
+          xPercent: 100,
           autoAlpha: 0,
           ease: "back(2)",
           duration: 1,
-          delay: 2,
-        })
-        .from(
-          ".para_hero",
-          {
-            xPercent: 100,
-            autoAlpha: 0,
-            ease: "back(2)",
-            duration: 1,
-          },
-          "-=.8"
-        )
-        .fromTo(
-          ".city_img",
-          {
-            autoAlpha: 0,
-            xPercent: 20,
-          },
-          {
-            autoAlpha: 0.3,
-            xPercent: 0,
-          },
-          "<"
-        )
-        .from(
-          ".scroll_down",
-          {
-            yPercent: -50,
-            autoAlpha: 0,
-            duration: 0.8,
-            ease: "power.Out()",
-          },
-          "-=.2"
-        );
-    </script>
-  </body>
+        },
+        "-=.8"
+      )
+      .fromTo(
+        ".city_img", {
+          autoAlpha: 0,
+          xPercent: 20,
+        }, {
+          autoAlpha: 0.3,
+          xPercent: 0,
+        },
+        "<"
+      )
+      .from(
+        ".scroll_down", {
+          yPercent: -50,
+          autoAlpha: 0,
+          duration: 0.8,
+          ease: "power.Out()",
+        },
+        "-=.2"
+      );
+  </script>
+</body>
+
 </html>
